janetrs_macros/tests/05-wrong-args.stderr
error: expected exactly one argument of type `&mut [janetrs::types::Janet]`
 --> $DIR/05-wrong-args:7:17
  |
7 | pub fn function(_args: &mut [Janet], _wrong: Janet) -> Janet {
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
